--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@vercel/blob": "^0.2.0",
     "buffer": "^6.0.3",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
